--- a/index.css
+++ b/index.css
@@ -44,15 +44,33 @@ html.lenis {
   overflow: hidden;
 }
 
+.home-cards {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid hsla(208, 81%, 82%, 10%);
+  backdrop-filter: blur(8px);
+  padding: 1rem 2rem;
+  border-radius: 12px;
+  position: absolute;
+}
+
+#card-design {
+  top: 0;
+  right: 0;
+  padding: 1rem 3rem;
+}
+
+#card-development {
+  bottom: 0;
+  left: -2%;
+}
+
 .icons {
   display: flex;
   justify-items: center;
-}
-
-.hash-span {
-  margin-top: -100px;
-  padding-bottom: 100px;
-  display: block;
 }
 
 /* canvas- styles */
