--- a/index.css
+++ b/index.css
@@ -85,6 +85,35 @@ html.lenis {
   transform: translateZ(0);
 }
 
+@media screen and (max-width: 780px) {
+  .about-box {
+    z-index: 3;
+    position: absolute;
+  }
+
+  .about-box:nth-child(1) {
+    z-index: 2;
+  }
+  .about-box:nth-child(2) {
+    z-index: 1;
+  }
+  /* .tech-balls {
+    display: grid;
+    grid-template-columns: 2fr;
+  } */
+  /* .tech-container {
+    margin-top: 25rem;
+  } */
+
+  .tech-container {
+    margin-top: 1200px;
+  }
+  #tech {
+    width: 10rem;
+    z-index: 4;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 0.6rem;
   border-radius: 0.5rem;
