--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:ital@1&family=Nunito&display=swap"); */
-@import '/fonts.css';
+@import "/fonts.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -130,21 +130,30 @@ html.lenis {
   }
 }
 
+.tech-container {
+  position: relative;
+  z-index: 1;
+  margin-top: 5rem; /* Adjust as needed */
+}
+
+.tech-ball {
+  position: relative;
+  overflow: hidden;
+}
+
 @media screen and (max-width: 780px) {
   .about-box {
     z-index: 3;
     position: absolute;
   }
 
-
-
-
   .about-box:nth-child(1) {
     z-index: 2;
   }
   .about-box:nth-child(2) {
     z-index: 1;
-  } */
+  }
+  */
   /* .tech-balls {
     display: grid;
     grid-template-columns: 2fr;
@@ -154,11 +163,15 @@ html.lenis {
   } */
 
   .tech-container {
-    margin-top: 250vh;
+    margin-top: 5rem; /* Remove excessive margin */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 1rem;
   }
-  #tech {
-    width: 10rem;
-    z-index: 4;
+
+  .tech-ball {
+    width: 100%;
+    height: 11rem;
   }
 }
 
@@ -304,7 +317,7 @@ html.lenis {
 }
 
 .loader::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: -100%;
