--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ html.lenis {
 .tech-container {
   position: relative;
   z-index: 1;
-  margin-top: 5rem; /* Adjust as needed */
+  margin-top: 5rem;
 }
 
 .tech-ball {
@@ -142,36 +142,31 @@ html.lenis {
 }
 
 @media screen and (max-width: 780px) {
-  .about-box {
-    z-index: 3;
-    position: absolute;
-  }
-
-  .about-box:nth-child(1) {
-    z-index: 2;
-  }
-  .about-box:nth-child(2) {
-    z-index: 1;
-  }
-  */
-  /* .tech-balls {
-    display: grid;
-    grid-template-columns: 2fr;
-  }
-  /* .tech-container {
-    margin-top: 25rem;
-  } */
-
   .tech-container {
-    margin-top: 5rem; /* Remove excessive margin */
+    margin-top: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
+    padding: 1rem;
+    min-height: 0;
   }
 
   .tech-ball {
     width: 100%;
-    height: 11rem;
+    height: 8rem;
+    margin-bottom: 1rem;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .about {
+    margin-bottom: 0;
+    padding-bottom: 2rem;
+  }
+
+  .projects {
+    margin-top: 0;
+    padding-top: 2rem;
   }
 }
 
@@ -347,4 +342,10 @@ html.lenis {
   display: inline-block;
   opacity: 0;
   transform: translateY(20px);
+}
+
+.tech-container-wrapper {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
